apresentacao e sobre , html e ajustes

--- a/index.html
+++ b/index.html
@@ -12,21 +12,35 @@
 </head>
 <body>
     <div class="container">
-        <header>
+      <header>
+          <div class="content">
+              <h1>Júlio Vilar Melo</h1>
+              <div class="btn-mobile"><i class="fa fa-bars"></i></div>
+              <div class="clear"></div>
+              <mav class="menu">
+                  <ul>
+                      <li><a href="#">Portfólio</a></li>
+                      <li><a href="#">Sobre</a></li>
+                      <li><a href="#">Contato</a></li>
+                  </ul>
+              </mav>
+              <div class="clear"></div>
+          </div>
+      </header>
+        <section class="apresentacao">
             <div class="content">
-                <h1>Júlio Vilar Melo</h1>
-                <div class="btn-mobile"><i class="fa fa-bars"></i></div>
-                <div class="clear"></div>
-                <mav class="menu">
-                    <ul>
-                        <li><a href="#">Portfólio</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul>
-                </mav>
-                <div class="clear"></div>
+                <h2>< Hello! ></h2>
+                <p>Web Developer - Freelancer</p>
             </div>
-        </header>
+        </section>
+
+
+        <section class="sobre">
+            <div class="content">
+               <h2>Sobre</h2>
+               <p>Desenvolvedor Web, paraibano, atualmente resido em João Pessoa, tenho 22 anos, sou formado em análise e desenvolvimento de sistemas, e pós graduando em desenvolvimento de aplicações web pela UNIPÊ-JP, apaixonado por tecnologia e empreendedorismo</p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
