--- a/index.html
+++ b/index.html
@@ -12,35 +12,86 @@
 </head>
 <body>
     <div class="container">
-      <header>
-          <div class="content">
-              <h1>Júlio Vilar Melo</h1>
-              <div class="btn-mobile"><i class="fa fa-bars"></i></div>
-              <div class="clear"></div>
-              <mav class="menu">
-                  <ul>
-                      <li><a href="#">Portfólio</a></li>
-                      <li><a href="#">Sobre</a></li>
-                      <li><a href="#">Contato</a></li>
-                  </ul>
-              </mav>
-              <div class="clear"></div>
-          </div>
-      </header>
+        <header>
+            <div class="content">
+                <h1>Júlio Vilar Melo</h1>
+                <div class="btn-mobile"><i class="fa fa-bars"></i></div>
+                <div class="clear"></div>
+                <mav class="menu">
+                    <ul>
+                        <li><a href="#">Portfólio</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </mav>
+                <div class="clear"></div>
+            </div>
+        </header>
         <section class="apresentacao">
             <div class="content">
                 <h2>< Hello! ></h2>
                 <p>Web Developer - Freelancer</p>
             </div>
         </section>
-
-
         <section class="sobre">
             <div class="content">
                <h2>Sobre</h2>
-               <p>Desenvolvedor Web, paraibano, atualmente resido em João Pessoa, tenho 22 anos, sou formado em análise e desenvolvimento de sistemas, e pós graduando em desenvolvimento de aplicações web pela UNIPÊ-JP, apaixonado por tecnologia e empreendedorismo</p>
+               <i class="fa fa-graduation-cap"></i>
+               <p>Desenvolvedor Web, paraibano, atualmente resido em João Pessoa, tenho 22 anos, sou formado em análise e desenvolvimento de sistemas, e pós graduando em desenvolvimento de aplicações web pela UNIPÊ-JP, estou sempre atento as melhores práticas de desenvolvimento e aprimorando meus conhecimentos, apaixonado por tecnologia e empreendedorismo, para mim programação além de trabalho é um hobby.</p>
             </div>
         </section>
+        <section class="skills">
+            <div class="content">
+
+            </div>
+        </section>
+        <section class="portfolio">
+            <div class="content">
+                <h2>Sites disponíveis</h2>
+                <article class="trabalho">
+                    <figure>
+                      <a href="http://www.siteadv.esy.es" target="_blank"><img src="img/trabalho1.jpeg" alt="advogacia/contabilidade" /></a>
+                    </figure>
+                    <div>
+                        <h3>Advogacia/contabilidade</h3>
+                        <p>HTML, CSS, Responsive, Mobile first, Jquery</p>
+                    </div>
+                </article>
+                <article class="trabalho">
+                    <figure>
+                      <a href="#"><img src="img/trabalho2.jpeg" alt="Portfolio pessoal" /></a>
+                    </figure>
+                    <div>
+                        <h3>Portfólio pessoal</h3>
+                        <p>HTML, CSS, Responsive, Mobile first, Jquery</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section class="contato">
+            <div class="content">
+              <h2>Contato</h2>
+                <form action="" method="post">
+                    <input type="text" name="nome"  placeholder="Nome">
+                    <input type="text" name="email"  placeholder="Email"/>
+                    <input type="text" name="assunto" id="inputAssunto" placeholder="Assunto"/>
+                    <textarea placeholder="Mensagem" name="mensagem" rows="7"></textarea>
+                    <input type="submit" value="Enviar"/>
+                </form>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="content">
+                <p>Desenvolvido por Júlio Melo</p>
+                <ul>
+                    <li><a href="https://www.facebook.com/julio.melo.501" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/JulioVilarM" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://plus.google.com/u/0/+JulioMelodev" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="https://github.com/JulioVMelo" target="_blank"><i class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </section>
+
     </div>
 </body>
 </html>
